--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,7 @@
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
+    --color-red-400: oklch(70.4% 0.191 22.216);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -26,12 +27,19 @@
     --font-weight-light: 300;
     --font-weight-normal: 400;
     --font-weight-medium: 500;
+    --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --font-weight-black: 900;
+    --tracking-tighter: -0.05em;
+    --tracking-wide: 0.025em;
+    --tracking-widest: 0.1em;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --font-display: "Etna" , sans-serif;
+    --font-Pop: "Poppins" , sans-serif;
+    --font-PT: "PTSans" , sans-serif;
   }
 }
 @layer base {
@@ -276,6 +284,9 @@
   .inline-flex {
     display: inline-flex;
   }
+  .table {
+    display: table;
+  }
   .h-48 {
     height: calc(var(--spacing) * 48);
   }
@@ -336,11 +347,17 @@
   .max-w-xl {
     max-width: var(--container-xl);
   }
+  .flex-1 {
+    flex: 1;
+  }
   .flex-1\/2 {
     flex: calc(1/2 * 100%);
   }
   .flex-1\/5 {
     flex: calc(1/5 * 100%);
+  }
+  .flex-4 {
+    flex: 4;
   }
   .flex-4\/6 {
     flex: calc(4/6 * 100%);
@@ -348,14 +365,23 @@
   .flex-shrink {
     flex-shrink: 1;
   }
+  .basis-3 {
+    flex-basis: calc(var(--spacing) * 3);
+  }
   .basis-3\/10 {
     flex-basis: calc(3/10 * 100%);
   }
   .basis-\[90\%\] {
     flex-basis: 90%;
   }
+  .border-collapse {
+    border-collapse: collapse;
+  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
+  }
+  .resize {
+    resize: both;
   }
   .flex-row {
     flex-direction: row;
@@ -446,6 +472,9 @@
   .bg-\[\#D9D9D9\] {
     background-color: #D9D9D9;
   }
+  .bg-red-400 {
+    background-color: var(--color-red-400);
+  }
   .object-contain {
     object-fit: contain;
   }
@@ -455,14 +484,23 @@
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
+  .px-3 {
+    padding-inline: calc(var(--spacing) * 3);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
   .px-96 {
     padding-inline: calc(var(--spacing) * 96);
   }
+  .py-0 {
+    padding-block: calc(var(--spacing) * 0);
+  }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
+  }
+  .py-1 {
+    padding-block: calc(var(--spacing) * 1);
   }
   .py-1\.5 {
     padding-block: calc(var(--spacing) * 1.5);
@@ -566,6 +604,12 @@
   .text-center {
     text-align: center;
   }
+  .font-PT {
+    font-family: var(--font-PT);
+  }
+  .font-Pop {
+    font-family: var(--font-Pop);
+  }
   .font-display {
     font-family: var(--font-display);
   }
@@ -600,6 +644,10 @@
   .text-\[16px\] {
     font-size: 16px;
   }
+  .font-black {
+    --tw-font-weight: var(--font-weight-black);
+    font-weight: var(--font-weight-black);
+  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -616,11 +664,30 @@
     --tw-font-weight: var(--font-weight-normal);
     font-weight: var(--font-weight-normal);
   }
+  .font-semibold {
+    --tw-font-weight: var(--font-weight-semibold);
+    font-weight: var(--font-weight-semibold);
+  }
+  .tracking-tighter {
+    --tw-tracking: var(--tracking-tighter);
+    letter-spacing: var(--tracking-tighter);
+  }
+  .tracking-wide {
+    --tw-tracking: var(--tracking-wide);
+    letter-spacing: var(--tracking-wide);
+  }
+  .tracking-widest {
+    --tw-tracking: var(--tracking-widest);
+    letter-spacing: var(--tracking-widest);
+  }
   .text-\[\#231C2F\] {
     color: #231C2F;
   }
   .text-\[\#D9D9D9\] {
     color: #D9D9D9;
+  }
+  .text-\[\#c4c4c4\] {
+    color: #c4c4c4;
   }
   .text-gray-500 {
     color: var(--color-gray-500);
@@ -631,10 +698,24 @@
   .italic {
     font-style: italic;
   }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .hover\:text-white {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-white);
+      }
+    }
   }
   .end\:ms-12 {
     @media (width >= 300px) {
@@ -669,6 +750,12 @@
   .smile\:ps-10 {
     @media (width >= 427px) {
       padding-inline-start: calc(var(--spacing) * 10);
+    }
+  }
+  .smile\:text-4xl {
+    @media (width >= 427px) {
+      font-size: var(--text-4xl);
+      line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
   .smile\:text-5xl {
@@ -901,6 +988,20 @@
   font-weight: 10;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Poppins';
+  src: url('/fonts/Poppins-Regular.woff2') format('woff2');
+  font-display: swap;
+  font-weight: 20;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PTSans';
+  src: url('/fonts/PTSans-Regular.woff2') format('woff2');
+  font-display: swap;
+  font-weight: 100;
+  font-style: normal;
+}
 @property --tw-rotate-x {
   syntax: "*";
   inherits: false;
@@ -935,6 +1036,15 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-tracking {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -946,6 +1056,8 @@
       --tw-space-y-reverse: 0;
       --tw-border-style: solid;
       --tw-font-weight: initial;
+      --tw-tracking: initial;
+      --tw-outline-style: solid;
     }
   }
 }
