--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,6 @@
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
-    --color-red-400: oklch(70.4% 0.191 22.216);
     --color-gray-500: oklch(55.1% 0.027 264.364);
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -29,9 +28,9 @@
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
-    --font-weight-black: 900;
     --tracking-tighter: -0.05em;
     --tracking-wide: 0.025em;
+    --tracking-wider: 0.05em;
     --tracking-widest: 0.1em;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
@@ -272,6 +271,15 @@
   .me-0 {
     margin-inline-end: calc(var(--spacing) * 0);
   }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
+  .mt-2\.5 {
+    margin-top: calc(var(--spacing) * 2.5);
+  }
+  .mt-3 {
+    margin-top: calc(var(--spacing) * 3);
+  }
   .block {
     display: block;
   }
@@ -290,11 +298,32 @@
   .h-48 {
     height: calc(var(--spacing) * 48);
   }
+  .h-49 {
+    height: calc(var(--spacing) * 49);
+  }
+  .h-58 {
+    height: calc(var(--spacing) * 58);
+  }
+  .h-58\.5 {
+    height: calc(var(--spacing) * 58.5);
+  }
+  .h-59 {
+    height: calc(var(--spacing) * 59);
+  }
+  .h-\[30px\] {
+    height: 30px;
+  }
+  .h-\[35px\] {
+    height: 35px;
+  }
   .h-\[40px\] {
     height: 40px;
   }
   .h-\[50px\] {
     height: 50px;
+  }
+  .h-\[55px\] {
+    height: 55px;
   }
   .h-\[60px\] {
     height: 60px;
@@ -319,6 +348,9 @@
   }
   .h-full {
     height: 100%;
+  }
+  .w-\[30px\] {
+    width: 30px;
   }
   .w-\[40px\] {
     width: 40px;
@@ -380,8 +412,14 @@
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
+  .cursor-pointer {
+    cursor: pointer;
+  }
   .resize {
     resize: both;
+  }
+  .flex-col {
+    flex-direction: column;
   }
   .flex-row {
     flex-direction: row;
@@ -418,6 +456,9 @@
   }
   .gap-3 {
     gap: calc(var(--spacing) * 3);
+  }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
   }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
@@ -472,9 +513,6 @@
   .bg-\[\#D9D9D9\] {
     background-color: #D9D9D9;
   }
-  .bg-red-400 {
-    background-color: var(--color-red-400);
-  }
   .object-contain {
     object-fit: contain;
   }
@@ -511,8 +549,17 @@
   .ps-0 {
     padding-inline-start: calc(var(--spacing) * 0);
   }
+  .ps-2 {
+    padding-inline-start: calc(var(--spacing) * 2);
+  }
   .ps-4 {
     padding-inline-start: calc(var(--spacing) * 4);
+  }
+  .ps-5 {
+    padding-inline-start: calc(var(--spacing) * 5);
+  }
+  .ps-8 {
+    padding-inline-start: calc(var(--spacing) * 8);
   }
   .ps-12 {
     padding-inline-start: calc(var(--spacing) * 12);
@@ -525,6 +572,12 @@
   }
   .pe-4 {
     padding-inline-end: calc(var(--spacing) * 4);
+  }
+  .pe-5 {
+    padding-inline-end: calc(var(--spacing) * 5);
+  }
+  .pe-8 {
+    padding-inline-end: calc(var(--spacing) * 8);
   }
   .pe-12 {
     padding-inline-end: calc(var(--spacing) * 12);
@@ -644,10 +697,6 @@
   .text-\[16px\] {
     font-size: 16px;
   }
-  .font-black {
-    --tw-font-weight: var(--font-weight-black);
-    font-weight: var(--font-weight-black);
-  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -675,6 +724,10 @@
   .tracking-wide {
     --tw-tracking: var(--tracking-wide);
     letter-spacing: var(--tracking-wide);
+  }
+  .tracking-wider {
+    --tw-tracking: var(--tracking-wider);
+    letter-spacing: var(--tracking-wider);
   }
   .tracking-widest {
     --tw-tracking: var(--tracking-widest);
@@ -752,12 +805,6 @@
       padding-inline-start: calc(var(--spacing) * 10);
     }
   }
-  .smile\:text-4xl {
-    @media (width >= 427px) {
-      font-size: var(--text-4xl);
-      line-height: var(--tw-leading, var(--text-4xl--line-height));
-    }
-  }
   .smile\:text-5xl {
     @media (width >= 427px) {
       font-size: var(--text-5xl);
@@ -794,6 +841,11 @@
   .tiny\:h-\[100px\] {
     @media (width >= 580px) {
       height: 100px;
+    }
+  }
+  .tiny\:h-\[135px\] {
+    @media (width >= 580px) {
+      height: 135px;
     }
   }
   .tiny\:h-\[720px\] {
@@ -978,6 +1030,26 @@
     @media (width >= 933px) {
       font-size: var(--text-4xl);
       line-height: var(--tw-leading, var(--text-4xl--line-height));
+    }
+  }
+  .md\:ps-2 {
+    @media (width >= 48rem) {
+      padding-inline-start: calc(var(--spacing) * 2);
+    }
+  }
+  .md\:ps-14 {
+    @media (width >= 48rem) {
+      padding-inline-start: calc(var(--spacing) * 14);
+    }
+  }
+  .lg\:ps-14 {
+    @media (width >= 64rem) {
+      padding-inline-start: calc(var(--spacing) * 14);
+    }
+  }
+  .xl\:ps-14 {
+    @media (width >= 80rem) {
+      padding-inline-start: calc(var(--spacing) * 14);
     }
   }
 }
